--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/jest": "^25.2.1",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/knex": "^0.16.1",
@@ -22,6 +23,7 @@
     "@types/koa-router": "^7.4.0",
     "@types/lodash": "^4.14.149",
     "@types/uuid": "^7.0.0",
+    "jest": "^25.4.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
   },
