--- a/package.json
+++ b/package.json
@@ -7,12 +7,25 @@
     "build": "tsc",
     "clean": "rm -rf dist",
     "dev": "ts-node app.ts",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/chai": "^4.2.11",
     "@types/jest": "^25.2.1",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.3.8",
@@ -22,6 +35,7 @@
     "@types/koa-router": "^7.4.0",
     "@types/lodash": "^4.14.149",
     "@types/uuid": "^7.0.0",
+    "chai": "^4.2.0",
     "jest": "^25.4.0",
     "ts-jest": "^25.4.0",
     "ts-node": "^8.6.2",
